[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "binary>=1.0.2",
    "ddgs>=9.5.4",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.2.0",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=0.5.3",
    "langgraph-checkpoint-postgres>=3.0.3",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "pool>=0.1.2.dev0",
    "psycopg[binary]>=3.3.2",
    "pypdf>=6.6.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
    "typing>=3.10.0.0",
    "watchdog>=6.0.0",
]
